k8/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alap-webapp
  namespace: cloudproject
spec:
  selector:
    app: alap-webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
