k8/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: alap-webapp
  name: alap-webapp
  namespace: cloudproject
spec:
  ingressClassName: nginx
  rules:
    - host: alap-webapp.34.170.77.158.nip.io
      http:
        paths:
          - backend:
              service:
                name: alap-webapp
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
